# mapreduce.jl

./: .gitignore  README.md  Untils.jl  mapreduce.jl  ndmapreduce.jl  test.jl
benchmarks/: benchmarks_to_df.jl
benchmarks/CUB/: .gitignore  CMakeLists.txt
benchmarks/CUB/src/: CUB_ReductionBenchmark.cuh  CUB_ReductionSample.h  Makefile  main.cu
benchmarks/CUDA/: ND.jl  benchmark.jl  benchmarkND.jl  benchmarkND_dims.jl  benchmarkND_elements_per_group.jl  scalar.jl
benchmarks/Metal/: ND.jl  benchmark.jl  benchmarkND.jl  scalar.jl
src/: CUDAlaunch.jl  KAmapreduce.jl  Metallaunch.jl  launch.jl  ndmapreduce.jl  ndreduce2.jl
test/: CUDATest.jl  MetalTest.jl  base.jl
visualization/: CUDA_ND_elements_per_group_vis.jl  CUDA_scalar_vis.jl
visualization/CUDA/: ND.jl  scalar.jl
visualization/Metal/: ND.jl  scalar.jl
